# array-lbaasv2-driver

./: README.rst  setup.cfg  setup.py
array_lbaasv2_driver/common/: agent_rpc.py  agent_scheduler.py  constants_v2.py  db.py  driver_v2.py  exceptions.py  plugin_rpc.py  utils.py
array_lbaasv2_driver/db/: models.py  repository.py
array_lbaasv2_driver/v2/: driver_v2.py
pkg/: array-lbaasv2-driver.spec
scripts/: array_add_provider.py  array_lbaas_init_db  generate_provider.sh
