[metadata]
name = array-lbaasv2-driver
summary = Array Networks Driver for OpenStack LBaaSv2 service
description-file =
    README.rst
author = wangli2
author-email = wangli2@arraynetworks.com.cn
home-page = http://www.arraynetworks.com.cn
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages = array_lbaasv2_driver
scripts =
    scripts/array_lbaas_init_db
